--- a/rahman.html
+++ b/rahman.html
@@ -15,7 +15,7 @@
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="E:\portfolio\style.css">
+  <link rel="stylesheet" href="script.js">
 
   <!--
     - google font link
