--- a/rahman.html
+++ b/rahman.html
@@ -15,7 +15,7 @@
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="script.js">
+  <link rel="stylesheet" href="style.css">
 
   <!--
     - google font link
@@ -919,7 +919,7 @@
   <!--
     - custom js link
   -->
-  <script src="E:\portfolio\script.js"></script>
+  <script src="script.js"></script>
 
   <!--
     - ionicon link
