--- a/rahman.html
+++ b/rahman.html
@@ -348,7 +348,7 @@
 
             </li>
             <div class="resume-container">
-              <iframe src="E:\portfolio\img\Screenshot 2025-08-15 224733.png" frameborder="0"></iframe>
+              <iframe src="img\Screenshot 2025-08-15 224733.png" frameborder="0"></iframe>
               <a href="https://drive.google.com/file/d/1WT7rSmXeg61EnqWVEVdOW7JKa0vXQ9eD/view?usp=drive_link" download class="download-btn">Download Resume</a>
             </div>
 
@@ -557,7 +557,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="E:\portfolio\img\Screenshot 2025-08-15 220359.png">
+                  <img src="img/Screenshot 2025-08-15 220359.png">
                 </figure>
 
                 <h3 class="project-title">Angular JS</h3>
@@ -573,7 +573,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="E:\portfolio\img\Screenshot 2025-08-15 221927.png">
+                  <img src="img\Screenshot 2025-08-15 221927.png">
                 </figure>
 
               
